--- a/index.html
+++ b/index.html
@@ -169,33 +169,39 @@
           <div class="col-lg-6">
 
             <div class="progress">
-              <span class="skill">HTML <i class="val">84%</i></span>
+              <span class="skill">HTML <i class="val">63.7%</i></span>
               <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="84" aria-valuemin="0" aria-valuemax="100" style="width: 84%;"></div>
+                <div class="progress-bar" role="progressbar" aria-valuenow="63.7" aria-valuemin="0" aria-valuemax="100" style="width: 84%;"></div>
               </div>
             </div>
 
             <div class="progress">
-              <span class="skill">CSS <i class="val">7%</i></span>
+              <span class="skill">CSS <i class="val">15.5%</i></span>
               <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="7" aria-valuemin="0" aria-valuemax="100" style="width: 7%;"></div>
+                <div class="progress-bar" role="progressbar" aria-valuenow="15.5" aria-valuemin="0" aria-valuemax="100" style="width: 7%;"></div>
               </div>
             </div>
-
+		  
+            <div class="progress">
+              <span class="skill">SCSS <i class="val">15.6%</i></span>
+              <div class="progress-bar-wrap">
+                <div class="progress-bar" role="progressbar" aria-valuenow="15.6" aria-valuemin="0" aria-valuemax="100" style="width: 1%;"></div>
+              </div>
+            </div>
           </div>
 
           <div class="col-lg-6">
 
             <div class="progress">
-              <span class="skill">PHP <i class="val">1%</i></span>
+              <span class="skill">PHP <i class="val">0.9%</i></span>
               <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="1" aria-valuemin="0" aria-valuemax="100" style="width: 1%;"></div>
+                <div class="progress-bar" role="progressbar" aria-valuenow="0.9" aria-valuemin="0" aria-valuemax="100" style="width: 1%;"></div>
               </div>
             </div>
             <div class="progress">
-              <span class="skill">JavaScript <i class="val">8%</i></span>
+              <span class="skill">JavaScript <i class="val">4.3%</i></span>
               <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="8" aria-valuemin="0" aria-valuemax="100" style="width: 8%;"></div>
+                <div class="progress-bar" role="progressbar" aria-valuenow="4.3" aria-valuemin="0" aria-valuemax="100" style="width: 8%;"></div>
               </div>
             </div>
 
