--- a/index.html
+++ b/index.html
@@ -278,18 +278,20 @@
           </form></div></div></div></section><!-- End Contact Section --></main><!-- End #main -->
 
   <!-- ======= Footer ======= -->
-<footer id="footer">      <h3>静雨轩-Stillrainの小窝</h3>
-      以下为联系方式
-<br>微信:Stillrain-001<br>QQ:2863970084<br>手机号:18600663237<br>哔哩哔哩:UID577681223<br>QQ音乐:静雨轩-Stillrain<div class="footer social-links"><a href="https://space.bilibili.com/577681223"><img src="images/bilibili logo.png" height="20px" width="20px" alt="instagram-logo"></a>
-                <a href="https://y.qq.com/n/ryqq/singer/0007Uaqt3WuRDB"><img src="images/qqmusic logo.png" height="20px" width="20px" alt="facebook-logo"></a>
-                <a href="tencent://message/?uin=2863970084&amp;Site=&amp;Menu=yes"><img src="images/qq logo.png" height="20px" width="20px" alt="twitter-logo"></a>
-      </div>       
+<footer id="footer">
+    <h3>静雨轩-Stillrainの小窝</h3>
+    以下为联系方式<br>微信:Stillrain-001<br>QQ:2863970084<br>手机号:18600663237<br>哔哩哔哩:UID577681223<br>QQ音乐:静雨轩-Stillrain
+    <div class="footer social-links">
+    <a href="https://space.bilibili.com/577681223"><img src="images/bilibili logo.png" height="20px" width="20px" alt="instagram-logo"></a>
+    <a href="https://y.qq.com/n/ryqq/singer/0007Uaqt3WuRDB"><img src="images/qqmusic logo.png" height="20px" width="20px" alt="facebook-logo"></a>
+    <a href="tencent://message/?uin=2863970084&amp;Site=&amp;Menu=yes"><img src="images/qq logo.png" height="20px" width="20px" alt="twitter-logo"></a>
+    </div>       
 <div class="copyright">
-        © 2022 Copyright <strong><span>Computer Killer Office&amp;Xiaopeng Studio</span></strong>. All Rights Reserved
-      </div>
+    © 2022 Copyright <strong><span>Computer Killer Office&amp;Xiaopeng Studio</span></strong>. All Rights Reserved
+    </div>
       
     
-  </footer><!-- End Footer -->
+  <div><div id="global_actions"><div id="global_action_menu"></div></div></div></footer><!-- End Footer -->
 
   
   <a href="#" class="back-to-top d-flex align-items-center justify-content-center active"><i class="bi bi-arrow-up-short"></i></a>
