--- a/index.html
+++ b/index.html
@@ -278,7 +278,7 @@
           </form></div></div></div></section><!-- End Contact Section --></main><!-- End #main -->
 
   <!-- ======= Footer ======= -->
-<footer id="footer">
+<footer style="text-align:center;">
     <h3>静雨轩-Stillrainの小窝</h3>
     以下为联系方式<br>微信:Stillrain-001<br>QQ:2863970084<br>手机号:18600663237<br>哔哩哔哩:UID577681223<br>QQ音乐:静雨轩-Stillrain
     <div class="footer social-links">
