--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@
         <div class="section-title">
           <h2>相册 Album</h2>
         </div>
- 	   <a href="album.html"><button type="submit" style="background: #0563bb;display:block;margin:0 auto;border: 0;padding: 10px 35px;color: #fff;transition: 0.4s;border-radius: 50px;">发送消息</button>
+ 	   <a href="album.html"><button type="submit" style="background: #0563bb;display:block;margin:0 auto;border: 0;padding: 10px 35px;color: #fff;transition: 0.4s;border-radius: 50px;">前往相册(本操作需要跳转)</button>
 
     </section><!-- End Portfolio Section -->
     <!-- ======= Contact Section ======= -->
