--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         <li><a href="#about" class="nav-link scrollto"><i class="bx bx-user"></i> <span>关于我</span></a></li>
         <li><a href="#facts" class="nav-link scrollto"><i class="bi bi-award"></i> <span>成就</span></a></li>
         <li><a href="#skills" class="nav-link scrollto"><i class="bx bx-file-blank"></i> <span>这个网站使用的技术</span></a></li>
-        <li><a href="#portfolio" class="nav-link scrollto"><i class="bx bx-book-content"></i> <span>我的计划</span></a></li>
+        <li><a href="#portfolio" class="nav-link scrollto"><i class="bx bx-book-content"></i> <span>我的相册</span></a></li>
         <li><a href="#contact" class="nav-link scrollto active"><i class="bx bx-envelope"></i> <span>联系我</span></a></li>
       </ul>
     </nav><!-- .nav-menu -->
