--- a/video.html
+++ b/video.html
@@ -3,20 +3,13 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>静雨轩-Stillrainの小窝</title>
+  <title>请稍后</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
   <!-- Favicons -->
   <link href="assets/img/favicon.png" rel="icon">
   <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
-<style type="text/css">
-    html {
-    FILTER: gray;
-    -webkit-filter: grayscale(100%);
-    }
-</style>
-
   <!-- Vendor CSS Files -->
   <link href="assets/vendor/aos/aos.css" rel="stylesheet">
   <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
