--- a/index.html
+++ b/index.html
@@ -51,12 +51,12 @@
   <section id="hero" class="d-flex flex-column justify-content-center">
     <div class="container aos-init aos-animate" data-aos="zoom-in" data-aos-delay="100">
       <h1>静雨轩-Stillrainの小窝</h1>
-      <!--<p>一个初二的撅子生，喜欢<span class="typed" data-typed-items="做PPTOS,做程序,打游戏,简化系统,听冬之花"></span><span class="typed-cursor" aria-hidden="true"></span></p>-->
-	<p>江泽民同志逝世，享年96岁
+      <p>一个初二的撅子生，喜欢<span class="typed" data-typed-items="做PPTOS(彳亍,做程序(雾,打游戏(大喜,简化系统(悲,听冬之花(好啊，很好啊)"></span><span class="typed-cursor" aria-hidden="true"></span></p>
+	<!--<p>江泽民同志逝世，享年96岁
 	<br>中国共产党中央委员会、中华人民共和国全国人民代表大会常务委员会、中华人民共和国国务院、中国人民政治协商会议全国委员会、中国共产党和中华人民共和国中央军事委员会，极其悲痛地向全党全军全国各族人民通告：
 	<br>我们敬爱的江泽民同志患白血病合并多脏器功能衰竭，抢救无效，于2022年11月30日12时13分在上海逝世，享年96岁。 
 	<br>江泽民同志是我党我军我国各族人民公认的享有崇高威望的卓越领导人，伟大的马克思主义者，伟大的无产阶级革命家、政治家、军事家、外交家，久经考验的共产主义战士，中国特色社会主义伟大事业的杰出领导者，党的第三代中央领导集体的核心，“三个代表”重要思想的主要创立者。
-	<br> 江泽民同志永垂不朽！</p>
+	<br> 江泽民同志永垂不朽！</p>-->
       <div class="social-links">
                 <a href="https://space.bilibili.com/577681223"><img src="images/bilibili logo.png" height="30px" width="30px" alt="instagram-logo"></a><!--Your instagram homepage link inser in place of "#"-->
                 <a href="https://y.qq.com/n/ryqq/singer/0007Uaqt3WuRDB"><img src="images/qqmusic logo.png" height="30px" width="30px" alt="facebook-logo"></a>
