--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
   <!-- Favicons -->
   <link href="assets/img/favicon.png" rel="icon">
   <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
-<style type="text/css">
+<!--<style type="text/css">
     html {
     FILTER: gray;
     -webkit-filter: grayscale(100%);
     }
-</style>
+</style>-->
 
   <!-- Vendor CSS Files -->
   <link href="assets/vendor/aos/aos.css" rel="stylesheet">
