--- a/index.html
+++ b/index.html
@@ -272,7 +272,7 @@
                 <textarea class="form-control" name="message" rows="5" placeholder="在这里输入消息的详细内容" required=""></textarea>
               </div>
 
- 	   <a href=""><button type="submit">发送消息</button>
+		    <a href=""><button type="submit">发送消息</button></a>
             
 
           </form></div></div></div></section><!-- End Contact Section --></main><!-- End #main -->
