--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
               </div>
             </div>
             <p>
-              静雨轩，一个会Python和HTML的初二学生，CMK Studio创始人之一，Mr. Wang Studios成员，Xiaopeng Studio成员，爱好及优点分别为：爱读书、做程序或网站、打游戏、做自媒体、精简系统、做PPTOS等；性格乐观开朗；精通关于电脑的大部分软硬件
+              静雨轩，一个会Python和HTML的初二学生，CMK Studio创始人之一，Mr. Wang Studios成员，Xiaopeng Studio的...副室长？爱好及优点分别为：爱读书、做程序或网站、打游戏、做自媒体、精简系统、做PPTOS等；性格乐观开朗；精通关于电脑的大部分软硬件
             </p>
           </div>
         </div>
