--- a/index.html
+++ b/index.html
@@ -285,8 +285,12 @@
                 <a href="tencent://message/?uin=2863970084&amp;Site=&amp;Menu=yes"><img src="images/qq logo.png" height="20px" width="20px" alt="twitter-logo"></a>
       </div>       
 <div class="copyright">
-        © 2022 Copyright <strong><span>Computer Killer Office&amp;Xiaopeng Studio</span></strong>. All Rights Reserved
+        © <span id="year"></span> Copyright <strong><span>Computer Killer Office&amp;Xiaopeng Studio</span></strong>. All Rights Reserved
       </div>
+
+<script>
+document.getElementById("year").innerHTML = new Date().getFullYear();
+</script>
       
     
   </footer><!-- End Footer -->
