--- a/index.html
+++ b/index.html
@@ -463,7 +463,7 @@
   <!-- ======= Footer ======= -->
     <footer id="footer">
       <div class="copyright">
-        © <span id="year"></span> Copyright <strong><span>静雨轩-Stillrain</span></strong>. All Rights Reserved
+        © <span id="year">2025</span> Copyright <strong><span>静雨轩-Stillrain</span></strong>. All Rights Reserved
       </div>
 
 <script>
